2004-10-17  Philippe Gerum  <rpm@xenomai.org>

 	* RELEASE: fusion-0.6.1

2004-10-17  Philippe Gerum  <rpm@xenomai.org>

	* README.INSTALL: Clarify Adeos-related issues.
	
	* arch/*/patches: Use vanilla Adeos file names.
	
	* nucleus/pod.c (xnpod_suspend_thread): Conservatively clear the
	wait channel upon signal aborted wait.

	* arch/i386/patches: Upgrade to Adeos 2.6.*-i386-r8c5.

2004-10-16  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/asm-*/system.h (__xnlock_get_irqsave): Get
	rid of the optimization allowing to spin interrupts on. The basic
	idea is correct, but the implementation was bugous
	Adeos-wise. Revert to a conservative implementation until SMP
	support is deemed stable in all other aspects.
	
	* nucleus/pod.c (xnpod_suspend_thread): Clear other unblocking
	condition bits when forcing XNBREAK upon signal.

2004-10-13  Philippe Gerum  <rpm@xenomai.org>

	* scripts/rtai-load.in: Allow for passing args to commands.
	e.g. ./run [target spec] -- arglist

2004-10-11  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/pod.c (xnpod_suspend_thread): Convert any pending
	XNKICKED state into the XNBREAK condition when attempting to
	suspend a runnable shadow thread which has received a Linux
	signal.

2004-10-10  Philippe Gerum  <rpm@xenomai.org>

 	* RELEASE: fusion-0.6

2004-10-10  Philippe Gerum  <rpm@xenomai.org>

	* GNUMakefile.am: Fix distclean-local for old fashioned build.

2004-10-09  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* GNUmakefiles.am building kernel modules : Force build of kernel
	and let Kbuild handle dependencies.

2004-10-09  Ivan Raikov <raikov@cc.gatech.edu>

	* scripts/rtai-load.in: Add support for user-defined module search
	directory.

2004-10-09  Philippe Gerum  <rpm@xenomai.org>

	* arch/i386/patches: Upgrade to Adeos 2.6.*-i386-r8c4 and
	2.6.8rc1-ppc-r6c8.

	* nucleus/shadow.c (engage_irq_shield, disengage_irq_shield):
	Improve concurrency while testing the shielded/unshieded state
	bits.
